mesh-demo/manifests/provider.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: provider
  labels:
    app: provider
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: tcp-dubbo
  selector:
    app: provider
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-v0.0.1
  labels:
    app: provider
    version: v0.0.1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: provider
      version: v0.0.1
  template:
    metadata:
      labels:
        app: provider
        version: v0.0.1
    spec:
      volumes:
        - name: config
          configMap:
            name: provider-config
            defaultMode: 420
      containers:
        - name: provider
          image: "registry.cn-hangzhou.aliyuncs.com/dmall/provider:v0.0.1"
          imagePullPolicy: Always
#          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/config"
          ports:
            - name: tcp-dubbo
              containerPort: 8888
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - provider
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-v0.0.2
  labels:
    app: provider
    version: v0.0.2
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: provider
      version: v0.0.2
  template:
    metadata:
      labels:
        app: provider
        version: v0.0.2
    spec:
      volumes:
        - name: config
          configMap:
            name: provider-config
            defaultMode: 420
      containers:
        - name: provider
          image: "registry.cn-hangzhou.aliyuncs.com/dmall/provider:v0.0.2"
          imagePullPolicy: Always
          #          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/config"
          ports:
            - name: tcp-dubbo
              containerPort: 8888
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - provider
              topologyKey: "kubernetes.io/hostname"
