mesh-demo/manifests/consumer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comsumer-v0.0.1
  labels:
    app: comsumer
    version: v0.0.1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: comsumer
      version: v0.0.1
  template:
    metadata:
      labels:
        app: comsumer
        version: v0.0.1
    spec:
      volumes:
        - name: config
          configMap:
            name: comsumer-config
            defaultMode: 420
      containers:
        - name: comsumer
          image: "registry.cn-hangzhou.aliyuncs.com/dmall/consumer:v0.0.1"
          imagePullPolicy: Always
#          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/config"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - provider
              topologyKey: "kubernetes.io/hostname"

---
apiVersion: v1
kind: Service
metadata:
  name: comsumer
  labels:
    app: comsumer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-gin
  selector:
    app: comsumer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: comsumer-ingress
  labels:
    app: comsumer
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: td.istio.dmall.com
      http:
        paths:
          - path: /
            backend:
              serviceName: comsumer
              servicePort: http-gin
